examples/test/testpolicy2992.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2992
  namespace: namespace250
spec:
  podSelector:
    matchLabels:
      key40: value27
      key11: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value3
          key37: value36
      podSelector:
        matchLabels:
          key22: value4
          key12: value31
